netlify form submission

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+  <form name="contact" netlify netlify-honeypot="bot-field" action="/" hidden>
+    <input type="text" name="name" />
+    <input className="form-control" type="email" name="email" />
+    <textarea name="message" rows="7" />
+  </form>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
