--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
   <form name="contact" netlify netlify-honeypot="bot-field" action="/" hidden>
     <input type="text" name="name" />
     <input className="form-control" type="email" name="email" />
-    <textarea name="message" rows="7" />
+    <input type="text" name="message" rows="7" />
   </form>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+</body>
 
 
 </html>
